--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFO</title>
 </head>
-<body>
-    <main>
-        <div>
+<body style="background-color: white;">
+    <main style="background-color: pink; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%; display: inline-block;">
+        <div style="background-color: aqua; width: 30%; float: left;">
             <h1>404</h1>
             <p>Page not found</p>
             <a href="#">Go home</a>
         </div>
-        <img src="#" alt="UFO image"> Paveikslelis
+        <img style="width: 60%; float: right;" src="./img/ufo.jpg" alt="UFO image">
     </main>
 </body>
 </html>
