--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>UFO</title>
 </head>
 <body style="background-color: white;">
-    <main style="background-color: pink; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%; display: inline-block;">
-        <div style="background-color: aqua; width: 30%; float: left;">
-            <h1>404</h1>
-            <p>Page not found</p>
-            <a href="#">Go home</a>
+    <main style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%; display: inline-block;">
+        <div style="width: 35%; float: left;">
+            <h1 style="color:rgb(28, 130, 232); font-size: 70px; font-weight: 600; font-family:serif;">404</h1>
+            <p style="font-size: 26px; text-transform: uppercase; font-weight: bold;">Page not found</p>
+            <a style="text-decoration: none; border: 2px solid rgb(28, 130, 232); padding: 5px 10px; border-radius: 25px; font-size: 18px; display:inline-block"; href="#">Go home</a>
         </div>
         <img style="width: 60%; float: right;" src="./img/ufo.jpg" alt="UFO image">
     </main>
