--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFO</title>
+    <meta name="description" content="404 page for website">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/favicon.ico" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body style="background-color: white;">
     <main style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%; display: inline-block;">
-        <div style="width: 35%; float: left;">
-            <h1 style="color:rgb(28, 130, 232); font-size: 70px; font-weight: 600; font-family:serif;">404</h1>
-            <p style="font-size: 26px; text-transform: uppercase; font-weight: bold;">Page not found</p>
-            <a style="text-decoration: none; border: 2px solid rgb(28, 130, 232); padding: 5px 10px; border-radius: 25px; font-size: 18px; display:inline-block"; href="#">Go home</a>
+        <div style="width: 35%; float: left; margin-top: 100px;">
+            <h1 style="color:rgb(40, 155, 240); font-size: 70px; font-weight: 600; font-family:serif; margin: 0;">404</h1>
+            <p style="font-size: 26px; text-transform: uppercase; font-weight: bold; color: rgb(95, 95, 95); margin-top: 0;">Page not found</p>
+            <a style="text-decoration: none; border: 2px solid rgb(40, 155, 240); padding: 5px 10px; border-radius: 25px; font-size: 18px; display:inline-block; color: rgb(40, 155, 240);"; href="#">Go home</a>
         </div>
         <img style="width: 60%; float: right;" src="./img/ufo.jpg" alt="UFO image">
     </main>
