--- a/index.html
+++ b/index.html
@@ -12,15 +12,59 @@
     <link rel="mask-icon" href="./favicon/favicon.ico" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <style>
+        body {
+            background-color: white;
+        }
+        main {
+            width: 60%;
+            margin-left: 20%;
+            margin-right: 20%;
+            margin-top: 10%;
+            display: inline-block;
+        }
+        div {
+            width: 35%;
+            float: left;
+            margin-top: 100px;
+        }
+        h1 {
+            color: rgb(40, 155, 240);
+            font-size: 70px;
+            font-weight: 600;
+            font-family: serif;
+            margin: 0;
+        }
+        p {
+            font-size: 26px;
+            text-transform: uppercase;
+            font-weight: bold;
+            color: rgb(95, 95, 95);
+            margin-top: 0;
+        }
+        a {
+            text-decoration: none;
+            border: 2px solid rgb(40, 155, 240);
+            padding: 5px 10px;
+            border-radius: 25px;
+            font-size: 18px;
+            display: inline-block;
+            color: rgb(40, 155, 240);
+        }
+        img {
+            width: 60%;
+            float: right;
+        }
+    </style>
 </head>
-<body style="background-color: white;">
-    <main style="width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%; display: inline-block;">
-        <div style="width: 35%; float: left; margin-top: 100px;">
-            <h1 style="color:rgb(40, 155, 240); font-size: 70px; font-weight: 600; font-family:serif; margin: 0;">404</h1>
-            <p style="font-size: 26px; text-transform: uppercase; font-weight: bold; color: rgb(95, 95, 95); margin-top: 0;">Page not found</p>
-            <a style="text-decoration: none; border: 2px solid rgb(40, 155, 240); padding: 5px 10px; border-radius: 25px; font-size: 18px; display:inline-block; color: rgb(40, 155, 240);"; href="#">Go home</a>
+<body>
+    <main>
+        <div>
+            <h1>404</h1>
+            <p>Page not found</p>
+            <a href="#">Go home</a>
         </div>
-        <img style="width: 60%; float: right;" src="./img/ufo.jpg" alt="UFO image">
+        <img src="./img/ufo.jpg" alt="UFO image">
     </main>
 </body>
 </html>
